[package]
name = "simulation_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rayon = "1.5"
cxx = "1.0" # For C++ interoperability
nalgebra = "0.29" # For high-precision arithmetic
warp = "0.3"

[dev-dependencies]
criterion = "0.3" # For benchmarking
