[package]
name = "simulation_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rayon = "1.5"
cxx = "1.0" # For C++ interoperability
nalgebra = "0.29" # For high-precision arithmetic
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
env_logger = "0.9"

[dev-dependencies]
criterion = { version = "0.3", features = ["default"] } # For benchmarking
